--- a/index.html
+++ b/index.html
@@ -19,13 +19,18 @@
     <nav id="nav" class="nav">
         <a href="" class="nav nav__link">Accueil</a>
         <a href="" class="nav nav__link">Page1</a>
-        <a href=""class="nav nav__link">A propos</a>
+        <a href="" class="nav nav__link">A propos</a>
     </nav>
-    <main id="main" class="main">
-    </main>
+    <div id="content-container">
+        <aside id="aside"></aside>
+
+        <main id="main" class="main"></main>
+    </div>
+
 
     <script src="./js/content.js"></script>
     <script src="./js/displayContent.js"></script>
+    <script src="./js/eventListener.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
